--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: bazarjani.kian@gmail.com # email of site's author
 url: https://bazza.dev # root address of the site
 baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
-  Coming soon!
+  Hi there, I'm Kian - nice to meet you! I'm an aspiring software developer, currently working as software engineering intern at Department of National Defence in Ottawa, Canada.
 
 permalink: /:slug.html
 
@@ -17,7 +17,7 @@ theme_config:
   appearance: "auto" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
-  show_description: false # show blog description in home page
+  show_description: true # show blog description in home page
 
 sass:
   style: :compressed
