Shorten site name

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Kian Bazarjani | Developer # name of the site
+title: Kian Bazarjani # name of the site
 author: Kian Bazarjani # name of site's author
 email: bazarjani.kian@gmail.com # email of site's author
 url: https://bazza.dev # root address of the site
