--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "eslint": "8.47.0",
     "eslint-config-next": "14.2.1",
     "framer-motion": "^10.16.1",
