--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "check-types": "tsc ---noEmit"
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
+    "motion": "^12.0.6",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
