--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
     "clsx": "^2.1.1",
+    "jotai": "^2.11.3",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
     "next": "15.1.6",
