--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
     "next": "15.1.6",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-highlight": "^7.0.2",
+    "rehype-mdx-code-props": "^3.0.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
