--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "web",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "clean": "rm -rf .next",
     "dev": "next dev --turbopack",
-    "build": "pnpm check && next build",
+    "build": "bun check && next build",
     "start": "next start",
     "format": "biome format --write .",
     "lint": "biome lint --write .",
@@ -16,17 +16,17 @@
     "@radix-ui/colors": "^3.0.0",
     "clsx": "^2.1.1",
     "jotai": "^2.11.3",
-    "lucide-react": "^0.474.0",
-    "motion": "^12.0.6",
-    "next": "15.2.4",
-    "next-themes": "^0.4.4",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.7",
+    "next": "15.4.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/node": "^20",
+    "@biomejs/biome": "2.1.2",
+    "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
