--- a/package.json
+++ b/package.json
@@ -14,23 +14,27 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "clsx": "^2.1.1",
     "jotai": "^2.11.3",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.7",
-    "next": "15.4.3",
+    "next": "15.4.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-plock": "^3.5.1",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
