--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "jotai": "^2.11.3",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.7",
-    "next": "15.4.4",
+    "next": "15.5.4",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-plock": "^3.5.1",
     "tailwind-merge": "^3.0.1"
   },
@@ -32,10 +32,14 @@
     "@biomejs/biome": "2.2.4",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
     "postcss": "^8",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0"
   }
 }
