--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "check-types": "tsc ---noEmit"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-beta.4",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
