--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     "format": "biome format --write .",
     "lint": "biome lint --write .",
     "check": "biome check --write .",
-    "check-types": "tsc ---noEmit"
+    "check-types": "tsc ---noEmit",
+    "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.4",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^15.5.4",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "fumadocs-core": "^15.8.5",
+    "fumadocs-mdx": "^12.0.3",
+    "install": "^0.13.0",
     "jotai": "^2.11.3",
+    "jsonc-parser": "^3.3.1",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.7",
     "next": "15.5.4",
