--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@shikijs/transformers": "^3.13.0",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
