--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-slider": "^1.2.3",
     "@shikijs/transformers": "^3.13.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@types/mdx": "^2.0.13",
