--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "biome format --write .",
     "lint": "biome lint --write .",
     "check": "biome check --write .",
-    "check-types": "tsc ---noEmit",
+    "type-check": "tsc --noEmit",
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
