--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "@base-ui-components/react": "^1.0.0-beta.4",
+    "@base-ui/react": "^1.0.0",
+    "@floating-ui/react": "^0.27.16",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^15.5.4",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-slider": "^1.2.3",
     "@shikijs/transformers": "^3.13.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@types/mdx": "^2.0.13",
