--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "format": "biome format --write .",
     "lint": "biome lint --write .",
     "check": "biome check --write .",
-    "check-types": "tsc ---noEmit",
+    "type-check": "tsc --noEmit",
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "@base-ui-components/react": "^1.0.0-beta.4",
+    "@base-ui/react": "^1.0.0",
+    "@floating-ui/react": "^0.27.16",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
-    "@next/mdx": "^15.5.4",
+    "@next/mdx": "16.1.1",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
@@ -33,10 +34,10 @@
     "jsonc-parser": "^3.3.1",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.7",
-    "next": "15.5.9",
+    "next": "16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-plock": "^3.5.1",
     "tailwind-merge": "^3.0.1",
     "zod": "^4.1.12"
@@ -45,14 +46,14 @@
     "@biomejs/biome": "2.2.4",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^22",
-    "@types/react": "19.2.0",
-    "@types/react-dom": "19.2.0",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "postcss": "^8",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   },
   "overrides": {
-    "@types/react": "19.2.0",
-    "@types/react-dom": "19.2.0"
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
