--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "clean": "rm -rf .next",
-    "dev": "next dev --turbopack",
+    "dev": "portless web.kianbazza next dev --turbopack",
     "build": "bun check && next build",
     "start": "next start",
     "format": "biome format --write .",
